Added Welcome Message

--- a/.htaccess
+++ b/.htaccess
@@ -43,3 +43,4 @@ RewriteRule ^signup/?$ create-account.php [L]
 RewriteRule ^login/?$ login.php [L]
 RewriteRule ^logout/?$ logout.php [L]
 RewriteRule ^verify-email(\/[-0-9a-f]{36})?$ verify-email.php?emailAuth=$1 [L]
+RewriteRule ^welcome$ welcome.php [L]
